<resources>
    <string name="app_name">Tracingapp</string>
    <string name="txtvTraceme">Selecteer hieronder uw gewenste Applicatie.</string>
    <string name="traceit">Trace it</string>
    <string name="traceme">Trace me</string>
    <string name="afsluiten">Afsluiten</string>
    <string name="local">Local : </string>
    <string name="verder">ok</string>
    <string name="anuleren">Anuleren</string>
    <string name="docent">Docent  : </string>
    <string-array name="arrayDocent">
        <item>docent1</item>
        <item>docent2</item>        
    </string-array>
</resources>