<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <TableRow>
    <TextView 
		android:text=" Some text here"
		android:padding="3dip" />
    </TableRow>  
    
    <View
        android:layout_height="1dip"
        android:background="#FF909090"
        android:layout_marginBottom="7dip" />        
         
    <TableRow>
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/docent" 
	        android:layout_gravity="right" />
		<Spinner 
	        android:id="@+id/sptxtdocent"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_column="1" />  		
    </TableRow>
    
      <TableRow android:padding="3dip" >
        <Button
        	android:id="@+id/btnVerder"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/verder"
			android:paddingLeft="10dip"
		/>
        <Button
        	android:id="@+id/btnAnuleren"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/anuleren"
			android:paddingLeft="10dip"
		/>
    </TableRow>
        
</TableLayout>